--- a/Encrypt/Encriptacion.csproj
+++ b/Encrypt/Encriptacion.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C687E64C-4538-40AC-B226-74B62335A6F0}</ProjectGuid>
+    <ProjectGuid>{6BDB3BBD-81AE-420B-B04B-D2994DD8ACDA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ML</RootNamespace>
-    <AssemblyName>ML</AssemblyName>
+    <RootNamespace>Encrypt</RootNamespace>
+    <AssemblyName>Encrypt</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,12 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cita.cs" />
-    <Compile Include="Doctor.cs" />
-    <Compile Include="Especialidad.cs" />
-    <Compile Include="Paciente.cs" />
+    <Compile Include="Encrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
