--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -150,6 +150,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\Email.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -184,6 +185,7 @@
     <Content Include="Views\Cita\GetAll.cshtml" />
     <Content Include="Views\Cita\Form.cshtml" />
     <Content Include="Views\Cita\Modal.cshtml" />
+    <Content Include="Views\Login\Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -206,6 +208,10 @@
     <ProjectReference Include="..\BL\BL.csproj">
       <Project>{2292d352-8e00-4c2f-8de1-9bf40bcceeb2}</Project>
       <Name>BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Encrypt\Encriptacion.csproj">
+      <Project>{6bdb3bbd-81ae-420b-b04b-d2994dd8acda}</Project>
+      <Name>Encriptacion</Name>
     </ProjectReference>
     <ProjectReference Include="..\ML\ML.csproj">
       <Project>{c687e64c-4538-40ac-b226-74b62335a6f0}</Project>
